--- a/src/styles.css
+++ b/src/styles.css
@@ -91,8 +91,8 @@ input {
 }
 
 .aside {
-  grid-column: 2 / 3;
-  background-color: #c0c0c0;
+  grid-column: 0 / span 3;
+  vertical-align: center;
 }
 
 .extras {
@@ -150,3 +150,9 @@ input {
 .total-price {
   font-size: 1.5rem;
 }
+
+.column {
+  float: left;
+  width: 50%;
+}
+
