add shadow effect on hover

--- a/src/styles.css
+++ b/src/styles.css
@@ -60,6 +60,7 @@ input {
   align-items: center;
   justify-content: space-between;
   margin-bottom: 1.5rem;
+
 }
 
 .logo {
@@ -155,4 +156,15 @@ input {
   float: left;
   width: 50%;
 }
+
+.item-container {
+  transition: box-shadow .3s;
+  width: 100%;
+  height: auto;
+  margin: 7px;
+  border-radius:10px;
+}
+.item-container:hover {
+           box-shadow: 0 0 11px rgba(33,33,33,.2);
+         }
 
