--- a/src/modal.css
+++ b/src/modal.css
@@ -1,20 +1,42 @@
 .modal {
+    background-color: white;
     position: fixed;
     top: 0;
     left: 0;
     width:100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.6);
+       
+  }
+
+  .bg-image {
+    background: rgba(0, 0, 0, 0.6); 
+    background-image: url('./assets/default-meal.jpg');
+    filter: blur(8px);
+    -webkit-filter: blur(15px);
+  
+    /* Full height */
+    height: 100%; 
+  
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
   
   .modal-main {
     position:fixed;
-    background: white;
-    width: 80%;
+    z-index: 10;
+    max-width: 700px;
     height: auto;
     top:50%;
     left:50%;
     transform: translate(-50%,-50%);
+  }
+
+  @media only screen and (max-width: 750px) {
+    .modal-main {
+      max-width: 80%;
+    }
   }
   
   .display-block {
