--- a/src/modal.css
+++ b/src/modal.css
@@ -10,7 +10,7 @@
 
   .bg-image {
     background: rgba(0, 0, 0, 0.6); 
-    background-image: url('./assets/default-meal.jpg');
+    /*background-image: url('./assets/default-meal.jpg');*/
     filter: blur(8px);
     -webkit-filter: blur(15px);
   
