--- a/src/modal.css
+++ b/src/modal.css
@@ -8,6 +8,58 @@
        
   }
 
+  .modal-media {
+    margin-bottom: -130px;
+  }
+
+  .modal-media-inner {
+    max-width: 450px;
+    height: 270px;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    z-index: 2;
+    width: 90%;
+
+    @media screen and (max-width: 480px) {
+        max-width: 310px;
+        height: 220px;
+        width: 90%;
+    }
+
+    @media screen and (max-width: 360px) {
+        height: 180px;
+    }
+  }
+
+  .modal-image {
+    max-width: 100%;
+    display: block;
+    max-height: 100%;
+    height: 300;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+    box-shadow: 0 10px 30px -10px rgba(66, 66, 66, 0.4);
+  }
+
+  .modal-content {
+    background: #fff;
+    box-shadow: 0 30px 60px 0 rgba(90, 116, 148, 0.4);
+    border-radius: 10px;
+    padding: 35px;
+    padding-top: 80px;
+
+    @media screen and (max-width: 480px) {
+        padding: 25px;
+        padding-top: 165px;
+    }
+    @media screen and (max-width: 360px) {
+        padding: 15px;
+        padding-top: 165px;
+    }
+  }
+
   .bg-image {
     background: rgba(0, 0, 0, 0.6); 
     /*background-image: url('./assets/default-meal.jpg');*/
