--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,7 @@ html {
 
 body {
   color: var(--primary);
-  background-color: var(--primary);
+  background-color: white;
   padding: 1rem;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
     sans-serif, Apple Color Emoji, Segoe UI Emoji;
@@ -184,4 +184,8 @@ input {
 
 .button-container {
   text-align: right;
+}
+
+.App-header {
+  background-color: white;
 }
