--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --primary: #312951;
+  --primary: white;
   --secondary: #473d72;
   --light: #fafafd;
 }
@@ -21,7 +21,7 @@ html {
 
 body {
   color: var(--primary);
-  background-color: white;
+  background-color: var(--primary);
   padding: 1rem;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
     sans-serif, Apple Color Emoji, Segoe UI Emoji;
