--- a/src/components/menu/item-details/card/card.css
+++ b/src/components/menu/item-details/card/card.css
@@ -35,7 +35,14 @@
     box-shadow: 0 30px 60px 0 rgba(90, 116, 148, 0.4);
     border-radius: 10px;
     padding: 35px;
-    padding-top: 150px;
+}
+
+.modal-content-with-img {
+    background: #fff;
+    box-shadow: 0 30px 60px 0 rgba(90, 116, 148, 0.4);
+    border-radius: 10px;
+    padding: 35px;
+    padding-top: 150px;  
 }
 
 .bg-image {
@@ -90,7 +97,7 @@
 
     /* Button Size */
     padding: 8px 30px;
-    font-size: 1.5rem;
+    font-size: 1rem;
 
     /* Button Colors */
     color: var(--color-primary-light);
@@ -125,6 +132,10 @@
 
     .modal-content {
         padding: 25px;
+    }
+
+    .modal-content-with-img {
+        padding: 25px;
         padding-top: 80px;
     }
 
@@ -142,8 +153,13 @@
 
     .modal-content {
         padding: 15px;
+    }
+
+    .modal-content-with-img {
+        padding: 15px;
         padding-top: 50px;
     }
+
     .modal-media {
         margin-bottom: -120px;
     }
