--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --primary: white;
+  --primary: #312951;
   --secondary: #473d72;
   --light: #fafafd;
   --font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
