--- a/src/components/menu/item-details/card/card.css
+++ b/src/components/menu/item-details/card/card.css
@@ -5,14 +5,13 @@
     left: 0;
     width:100%;
     height: 100%;
-  
-  }
-  
-  .modal-media {
+}
+
+.modal-media {
     margin-bottom: -140px;
-  }
-  
-  .modal-media-inner {
+}
+
+.modal-media-inner {
     max-width: 450px;
     height: 270px;
     margin-left: auto;
@@ -20,40 +19,47 @@
     position: relative;
     z-index: 2;
     width: 90%;
-  }
-  
-  .modal-image {
+}
+
+.modal-image {
     width: 100%;
     display: block;
     height: 280px;
     object-fit: cover;
     border-radius: 10px;
     box-shadow: 0 10px 30px -10px rgba(66, 66, 66, 0.4);
-  }
-  
-  .modal-content {
+}
+
+.modal-content {
     background: #fff;
     box-shadow: 0 30px 60px 0 rgba(90, 116, 148, 0.4);
     border-radius: 10px;
     padding: 35px;
-    padding-top: 150px;
-  }
-  
-  .bg-image {
-    background: rgba(0, 0, 0, 0.6);
+}
+
+.modal-content-with-img {
+    background: #fff;
+    box-shadow: 0 30px 60px 0 rgba(90, 116, 148, 0.4);
+    border-radius: 10px;
+    padding: 35px;
+    padding-top: 150px;  
+}
+
+.bg-image {
+    background: rgba(209, 209, 209, 0.6);
     filter: blur(8px);
     -webkit-filter: blur(15px);
-  
+
     /* Full height */
     height: 100%;
-  
+
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-  }
-  
-  .modal-main {
+}
+
+.modal-main {
     position:fixed;
     z-index: 10;
     max-width: 700px;
@@ -61,100 +67,104 @@
     top:50%;
     left:50%;
     transform: translate(-50%,-50%);
-  }
-  
-  .hr-modal {
+}
+
+.hr-modal {
     background-color: lightgray;
     height: 1px;
     border: 0;
-  }
-  
-  .display-block {
+}
+
+.display-block {
     display: block;
-  }
-  
-  .display-none {
+}
+
+.display-none {
     display: none;
-  }
-  
-  .modal-button {
-    --color-primary-light: #030086;
-    --color-secondary-light: #0804b8;
-    --color-white: #fff;
-    --font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
-    sans-serif, Apple Color Emoji, Segoe UI Emoji;
-  
+}
+
+.modal-button {
+    --color-primary-light: var(--primary);
+    --color-secondary-light: var(--primary);
+    --color-white: #fff;  
     font-family: var(--font-family);
-    font-size: 16px;
-    padding: 10px 60px;
     border-radius: 10px;
     margin: 10px 0px;
     cursor: pointer;
     transition: background-color 0.1s linear, color 0.1s linear,
     border 0.1s linear, outline 0.1s linear;
-  
-  
+
+
     /* Button Size */
     padding: 8px 30px;
-    font-size: 0.8rem;
-  
+    font-size: 1rem;
+
     /* Button Colors */
     color: var(--color-primary-light);
     border: 2px solid var(--color-primary-light);
     background: none;
-  }
-  
-  .modal-button:hover, .modal-button:focus {
+}
+
+.modal-button:hover, .modal-button:focus {
     color: var(--color-white);
     background-color:var(--color-secondary-light)
-  }
-  
-  .modal-button-container {
+}
+
+.modal-button-container {
     text-align: right;
-  }
-  
-  @media only screen and (max-width: 750px) {
+}
+
+@media only screen and (max-width: 750px) {
     .modal-main {
-      min-width: 80%;
+        min-width: 80%;
     }
-  }
-  
-  @media screen and (max-width: 480px) {
+}
+
+@media screen and (max-width: 480px) {
     .modal-media {
-      margin-bottom: -120px;
+        margin-bottom: -120px;
     }
     .modal-media-inner {
-      max-width: 310px;
-      height: 220px;
-      width: 90%;
+        max-width: 310px;
+        height: 220px;
+        width: 90%;
     }
-  
+
     .modal-content {
-      padding: 25px;
-      padding-top: 80px;
+        padding: 25px;
     }
-  
+
+    .modal-content-with-img {
+        padding: 25px;
+        padding-top: 80px;
+    }
+
     .modal-image {
-      height: 180px;
+        height: 180px;
     }
-  }
-  
-  @media screen and (max-width: 360px) {
+}
+
+@media screen and (max-width: 360px) {
     .modal-media-inner {
-      max-width: 310px;
-      height: 220px;
-      width: 90%;
+        max-width: 310px;
+        height: 220px;
+        width: 90%;
     }
-  
+
     .modal-content {
-      padding: 15px;
-      padding-top: 50px;
+        padding: 15px;
     }
+
+    .modal-content-with-img {
+        padding: 15px;
+        padding-top: 50px;
+    }
+
     .modal-media {
-      margin-bottom: -120px;
+        margin-bottom: -120px;
     }
-  
+
     .modal-image {
-      height: 150px;
+        height: 150px;
     }
-  }
+}
