--- a/src/components/menu/layout/menu-layout.css
+++ b/src/components/menu/layout/menu-layout.css
@@ -1,10 +1,9 @@
 .menu {
-    padding: 2rem 2.25rem 1rem;
-    margin: 0 auto;
-    max-width: 50rem;
-    background-color: var(--light);
-    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
-  }
+  padding: 2rem 2.25rem 1rem;
+  margin: 0 auto;
+  background-color: var(--light);
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
+}
   
 @media (min-width: 660px) {
   .menu {
@@ -12,6 +11,14 @@
     grid-gap: 4rem;
     grid-template-columns: 1fr 1fr;
   }
+}
+
+.menu-item {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
 }
 
 .column {
@@ -29,7 +36,6 @@
 }
 
 .logo {
-  width: 280px;
   margin: 0 auto 2rem;
   display: block;
   grid-column: 1 / 3;
@@ -37,6 +43,7 @@
 
 @media (min-width: 660px) {
   .logo {
+    width: 280px;
     margin-bottom: 0;
   }
 }
@@ -49,19 +56,11 @@
   border-radius:10px;
 }
 
-.item-container:hover {
-  box-shadow: 0 0 11px rgba(33,33,33,.2);
+.item-container:hover, .item-container:active{
+  box-shadow: 0 0 15px rgba(119, 119, 119, 0.2);
 }
 
 .item-container {
-  transition: all 0.2s;
-  transition-delay: 300ms;
-}
-
-.item-container:active {
-  background-color: #0039A8;
-}
-
-.item-container:focus {
-  background-color: #0F52C1;
+  transition: all .5s;
+  transition-delay: 10ms;
 }
