--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,9 @@
 :root {
-  --primary: white;
+  --primary: #312951;
   --secondary: #473d72;
   --light: #fafafd;
+  --font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+  sans-serif, Apple Color Emoji, Segoe UI Emoji;
 }
 
 html {
@@ -23,8 +25,7 @@ body {
   color: var(--primary);
   background-color: var(--primary);
   padding: 1rem;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
-    sans-serif, Apple Color Emoji, Segoe UI Emoji;
+  font-family: var(--font-family);
 }
 
 input {
